#pragma once
#include "range.hpp"

struct invariants
{
	size_t repeats;
	range range;
};
