@startuml
'!include styles/card-style.puml

hide unit methods
class unit {
	executor
	sorting
	generator
}

hide invariants members
class invariants

class engine {
	List<unit> units
	invariants
	test()
}

hide sorting fields
interface sorting {
	sort()
}

hide generator fields
class generator {
	generate()
}

hide executor fields
class executor {
	execute()
}

hide quick_sort fields
class quick_sort {
	sort()
}

hide dual_pivot_quick_sort fields
class dual_pivot_quick_sort {
	sort()
}

hide quick_merge_sort fields
class quick_merge_sort {
	sort()
}

hide intro_sort fields
class intro_sort {
	sort()
}

hide merge_sort fields
class merge_sort {
	sort()
}

hide partition fields
interface partition {
	partition()
}

hide lomuto_partition fields
class lomuto_partition {
	partition()
}

hide hoare_partition fields
class hoare_partition {
	partition()
}

hide operation methods
class operation {
	comparator
	swapper
	assigner
}

hide comparator members
interface comparator
hide simple_comparator members
hide count_comparator members

hide swapper members
interface swapper
hide simple_swapper members
hide count_swapper members

hide assigner members
interface assigner
hide simple_assigner members
hide count_assigner members

engine o-- unit
engine o-- invariants

unit *-- generator
unit *-- executor
unit *-- sorting

skinparam groupInheritance 3
skinparam linetype polyline

sorting <|.. quick_sort
sorting <|.. dual_pivot_quick_sort
sorting <|.. quick_merge_sort
sorting <|.. intro_sort
sorting <|.. merge_sort

quick_sort o-- partition
dual_pivot_quick_sort o-- partition
quick_merge_sort o-- partition
intro_sort o-- partition

partition <|.. lomuto_partition
partition <|.. hoare_partition


sorting *-- operation
operation *--- comparator
operation *--- swapper
operation *--- assigner

comparator <|.. simple_comparator
comparator <|.. count_comparator
swapper <|.. simple_swapper
swapper <|.. count_swapper
assigner <|.. simple_assigner
assigner <|.. count_assigner

@enduml
